fixed white space

--- a/mini_hackathon/src/components/Calendar/Calendar.css
+++ b/mini_hackathon/src/components/Calendar/Calendar.css
@@ -1,5 +1,5 @@
 .calendar-container {
-  height: 80%;
+  height: auto;
 }
 @keyframes flip {
   from {
