--- a/mini_hackathon/src/components/Collection/Collection.css
+++ b/mini_hackathon/src/components/Collection/Collection.css
@@ -1,6 +1,6 @@
 .gift-card-stack {
   position: relative;
-  height: 200px;
+  height: 0;
 }
 
 .gift-card {
@@ -19,3 +19,11 @@
   top: 20px;
   left: 10px;
 }
+/* .collection-container {
+  margin: 0;
+  padding: 0;
+}
+.collection-container.with-cards {
+  margin: 20px;
+  padding: 20px;
+} */
