--- a/mini_hackathon/src/index.css
+++ b/mini_hackathon/src/index.css
@@ -12,6 +12,8 @@ main {
   background-position: center;
   background-size: cover;
   display: flex;
+
+  min-height: 100vh;
 }
 @media screen and (max-width: 640px) {
   main {
